Allow "ai" as a variable name

--- a/.pylintrc
+++ b/.pylintrc
@@ -407,7 +407,8 @@ function-naming-style=snake_case
 #function-rgx=
 
 # Good variable names which should always be accepted, separated by a comma.
-good-names=dx,
+good-names=ai,
+           dx,
            dy,
            i,
            j,
