Move the ai log config to ERROR level

--- a/logging_config.json
+++ b/logging_config.json
@@ -16,7 +16,7 @@
     },
     "loggers": {
         "ai": {
-            "level": "DEBUG",
+            "level": "ERROR",
             "handlers": ["console"],
             "propagate": false
         },
