Add erynrl log config

--- a/logging_config.json
+++ b/logging_config.json
@@ -15,6 +15,11 @@
         }
     },
     "loggers": {
+        "erynrl": {
+            "level": "INFO",
+            "handlers": ["console"],
+            "propagate": false
+        },
         "erynrl.ai": {
             "level": "ERROR",
             "handlers": ["console"],
