Add the --sandbox argument to the default run config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,9 @@
             "type": "python",
             "request": "launch",
             "module": "erynrl",
+            "args": [
+                "--sandbox"
+            ],
             "justMyCode": true
         }
     ]
