Change the name of the Sandbox scheme to indicate it's the Sandbox scheme

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "ErynRL",
+            "name": "ErynRL (Sandbox)",
             "type": "python",
             "request": "launch",
             "module": "erynrl",
