Add non-Sandbox launch target

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "ErynRL",
+            "type": "python",
+            "request": "launch",
+            "module": "erynrl",
+            "args": [],
+            "justMyCode": true
+        },
+        {
             "name": "ErynRL (Sandbox)",
             "type": "python",
             "request": "launch",
