--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 astroid==2.14.1
+attrs==22.2.0
 autopep8==2.0.1
 cffi==1.15.0
 dill==0.3.6
+exceptiongroup==1.1.0
+iniconfig==2.0.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
 numpy==1.22.3
+packaging==23.0
 platformdirs==3.0.0
+pluggy==1.0.0
 pycodestyle==2.10.0
 pycparser==2.21
 pylint==2.16.1
+pytest==7.2.1
 tcod==13.6.1
 tomli==2.0.1
 tomlkit==0.11.6
