--- a/logging_config.json
+++ b/logging_config.json
@@ -62,6 +62,12 @@
             ],
             "propagate": false
         },
+        "erynrl.ui": {
+            "level": "DEBUG",
+            "handlers": [
+                "console"
+            ]
+        },
         "erynrl.visible": {
             "level": "DEBUG",
             "handlers": [
